[gd_scene load_steps=5 format=3 uid="uid://boblug0bdoqiw"]

[ext_resource type="Texture2D" uid="uid://bha82pojghrt7" path="res://Assets/background/background.jpg" id="1_8wn33"]
[ext_resource type="Script" uid="uid://bhlndff6kbse6" path="res://Cenas/operacoes.gd" id="1_ubgwi"]
[ext_resource type="FontFile" uid="uid://1sehkaj1cv7x" path="res://Assets/fontes/Pixel Digivolve.otf" id="2_4saif"]
[ext_resource type="PackedScene" uid="uid://dmjhvikuanjs7" path="res://Cenas/hud.tscn" id="4_xlkrv"]

[node name="Operacoes" type="Node"]
script = ExtResource("1_ubgwi")

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(577, 327)
scale = Vector2(1.4625, 1.4625)
texture = ExtResource("1_8wn33")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.5
offset_top = -31.5
offset_right = 576.5
offset_bottom = 31.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_4saif")
theme_override_font_sizes/font_size = 35
text = "Clique na resposta correta da operação x + y:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 270

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 40
text = "        8        "

[node name="Button2" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 40
text = "        8        "

[node name="Button3" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 40
text = "        8        "

[node name="Hud" parent="." instance=ExtResource("4_xlkrv")]

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button2" to="." method="_on_button_2_pressed"]
